kubernetes/apps/k8s-deployments-dashboard/01-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-deployments-dashboard
spec:
  type: ClusterIP
  selector:
    name: k8s-deployments-dashboard
  ports:
    - port: 80
      targetPort: 3000
